--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,3 +70,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.footersection {
+  text-align: center;
+  background-color: burlywood;
+  padding: 10px;
+
+}
